# k2

./: .clang-tidy  .cruft.json  .gitignore  CMakeLists.txt  Makefile  README.md  SECURITY.md  build.py  build.sh  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  style_check.yml
cmake/: FindCppyy.cmake  glog.cmake  py_cfg.cmake
docker/: README.md
docs/: ABOUT.md  README.md
docs/lang/cn/: README.md
docs/source/: conf.py
k2/: __init__.py
k2/binder/: CMakeLists.txt  array.py  fsa.py  selection.xml
k2/binder/pkg_templates/: MANIFEST.in.in
k2/binder/tests/: fsa_test.py  test_k2.py
k2/cc/: CMakeLists.txt  arcsort.cc  arcsort.h  arcsort_test.cc  array.h  array_test.cc  aux_labels.cc  aux_labels.h  aux_labels_test.cc  connect.cc  connect.h  connect_test.cc  dense_fsa.h  determinize.cc  determinize.h  determinize_impl.h  determinize_test.cc  fsa.cc  fsa.h  fsa_equivalent.cc  fsa_equivalent.h  fsa_equivalent_test.cc  fsa_renderer.cc  fsa_renderer.h  fsa_renderer_test.cc  fsa_test.cc  fsa_util.cc  fsa_util.h  fsa_util_test.cc  interface.h  intersect.cc  intersect.h  intersect_test.cc  properties.cc  properties.h  properties_test.cc  rmepsilon.cc  rmepsilon.h  rmepsilon_test.cc  topsort.cc  (+7 more)
k2/cc/dlpack/: CMakeLists.txt  array.h  dlpack.h  fsa_dlpack.h  tensor.cc  tensor.h
k2/cc/fsa/: CMakeLists.txt  arcsort.cc  arcsort.h  arcsort_test.cc  array.h  array_test.cc  aux_labels.cc  aux_labels.h  aux_labels_test.cc  connect.cc  connect.h  connect_test.cc  dense_fsa.h  determinize.cc  determinize.h  determinize_impl.h  determinize_test.cc  fsa.cc  fsa.h  fsa_equivalent.cc  fsa_equivalent.h  fsa_equivalent_test.cc  fsa_renderer.cc  fsa_renderer.h  fsa_renderer_test.cc  fsa_test.cc  fsa_util.cc  fsa_util.h  fsa_util_test.cc  intersect.cc  intersect.h  intersect_test.cc  properties.cc  properties.h  properties_test.cc  rmepsilon.cc  rmepsilon.h  rmepsilon_test.cc  topsort.cc  topsort.h  (+6 more)
k2/csrc/: CMakeLists.txt  array.h  array_ops_test.cu  context.cuh  context.h  context_inl.cuh  determinize.cc  dtype.h  fsa.h  log.cuh  log.h  ops.h  ops_inl.h  ragged.h  tensor.h  timer.h  utils.cu  utils.h  utils_inl.h
k2/csrc/host/: CMakeLists.txt
k2/py/cc/: CMakeLists.txt  array.cc  array.h  fsa.cc  fsa.h  fsa_renderer.cc  fsa_util.cc  fsa_util.h  sequeender.h  tensor.cc  tensor.h
k2/python/: __init__.py
k2/python/csrc/: CMakeLists.txt
k2/python/host/: __init__.py
k2/python/host/k2host/: __init__.py  fsa_algo.py
k2/python/k2/: __init__.py  array.py  autograd.py  aux_labels.py  dense_fsa_vec.py  fsa.py  fsa_algo.py  fsa_equivalent.py  fsa_properties.py  properties.py  utils.py  weights.py
k2/python/k2/ragged/: __init__.py  ops.py
k2/python/tests/: CMakeLists.txt  arcsort_test.py  array_test.py  aux_labels_test.py  connect_test.py  determinize_test.py  fsa_equivalent_test.py  fsa_test.py  intersect_test.py  properties_test.py  rmepsilon_test.py  topsort_test.py  weights_test.py
notes/: python.txt
scripts/: suppressions.txt
tests/test_example/: test_hello.py
